--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  /* background-color: black; */
+  // background-image: url("../public/images/782336.jpg")
 }
 
 .main {
