--- a/styles/NavBar.scss
+++ b/styles/NavBar.scss
@@ -1,4 +1,4 @@
-.NavbarItems {
+.navbar {
     background: transparent;
     /* linear-gradient(90deg, rgb(30, 95, 150) 0%, rgba(5, 178, 220, 1) 100%); */
     height: 80px;
@@ -6,8 +6,11 @@
     justify-content: center;
     align-items: center;
     font-size: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 
-    &:active {
+    &--active {
         background: linear-gradient(90deg, rgb(30, 95, 150) 0%, rgba(5, 178, 220, 1) 100%);
     }
 }
@@ -54,8 +57,21 @@
 }
 
 @media screen and (max-width: 960px) {
-    .NavbarItems {
-        position: relative;
+
+    .navbar {
+        background: transparent;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1rem;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+    
+        &--active {
+            background: linear-gradient(90deg, rgb(30, 95, 150) 0%, rgba(5, 178, 220, 1) 100%);
+        }
     }
 
     .nav-menu {
@@ -67,19 +83,20 @@
         top: 80px;
         left: -100%;
         opacity: 1;
-        transition: all 0.5s ease;
+        transition: all 0.85s ease;
         list-style-type: none;
-    }
+        background: linear-gradient(90deg, rgb(30, 95, 150) 0%, rgba(5, 178, 220, 1) 100%);
 
-    .active {
-        background: #05b2dc;
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 1;
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
+        &--active {
+            // background: linear-gradient(90deg, rgb(30, 95, 150) 0%, rgba(5, 178, 220, 1) 100%);
+            left: 0;
+            opacity: 1;
+            transition: all 0.85s ease;
+            z-index: 1;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
     }
 
     .nav-links {
