--- a/styles/NavBar.scss
+++ b/styles/NavBar.scss
@@ -9,6 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    border-bottom: 1px solid black;
 
     &--active {
         opacity: 60%;
