--- a/styles/About.scss
+++ b/styles/About.scss
@@ -13,30 +13,30 @@ video {
   
   .hero-container {
     // background: url('../public/images/782336.jpg') center center/cover no-repeat;
-    background: url('../public/shapes/banner-bg-shape-1-1.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #1e5f96;
+    // background: url('../public/shapes/contact-bg-shape-1-1.png');
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-color: #1e5f96 ;
     height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
     object-fit: contain;
   }
   
   .hero-container > h1 {
     color: #fff;
-    font-size: 100px;
+    font-size: 70px;
     margin-top: 0px;
   }
   
   .hero-container > p {
     margin-top: 8px;
     color: #fff;
-    font-size: 32px;
+    font-size: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
       'Lucida Sans', Arial, sans-serif;
   }
@@ -55,19 +55,19 @@ video {
   
   @media screen and (max-width: 960px) {
     .hero-container > h1 {
-      font-size: 70px;
+      font-size: 50px;
       margin-top: 0px;
     }
   }
   
   @media screen and (max-width: 768px) {
     .hero-container > h1 {
-      font-size: 50px;
+      font-size: 40px;
       margin-top: 0px;
     }
   
     .hero-container > p {
-      font-size: 30px;
+      font-size: 25px;
     }
   
     .btn-mobile {
