--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -23,7 +23,7 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
+    // box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
     object-fit: contain;
   }
   
